--- a/vanilla-go-htmx/page.html
+++ b/vanilla-go-htmx/page.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <title>Go-HTMX Todos</title>
   <script src="/static/htmx.min.js"></script>
 </head>
-
 <body>
-  {{.Body}}
+  {{template "content" .}}
 </body>
-
 </html>
